# SpaghettiEng

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/: imgui.ini
Assets/Shaders/: basic.fs  basic.vs  text.fs  text.vs
src/: CMakeLists.txt
src/BubbleSoup/: BubbleSoup.cpp  BubbleSoup.h  CMakeLists.txt
src/Common/: CMakeLists.txt  Common.h  LibCheck.cpp  LibCheck.h  Logger.cpp  Logger.h  Profiler.h  SmartPointerUtils.h  UUID.cpp  UUID.h
src/Core/: CMakeLists.txt  Common.h  Core.h  Init.cpp  Init.h  LibCheck.cpp  Logger.cpp  SpgAssert.h
src/Core/PlatformDetect/: CompilerDetect.h  EndianDetect.h  OSDetect.h  PlatformDetect.h
src/CoreLib/: CMakeLists.txt  Core.h  HelperMacros.h  Init.cpp  Init.h  Logger.cpp  Logger.h  SpgAssert.h
src/CoreLib/PlatformDetect/: ArchDetect.h  CompilerDetect.h  PlatformDetect.h
src/Geom/: CMakeLists.txt  Geom.cpp  Geom.h
src/Geom/Include/Geom/: Geom.h
src/GeomApp/: CMakeLists.txt  DefaultLayer.cpp  DefaultLayer.h  DefaultLayerUI.cpp  GeomApp.cpp  GeomApp.h
src/Geometry/: BST.cpp  BST.h  BSTree.cpp  BSTree.h  BoundingVolume.h  CMakeLists.txt  ConvexHull.cpp  ConvexHull.h  DCEL.cpp  DCEL.h  GeomBase.h  GeomUtils.cpp  GeomUtils.h  Geometry.cpp  Geometry.h  Init.cpp  Init.h  IntersectionSet.cpp  IntersectionSet.h  KDTree.cpp  KDTree.h  Line.h  MeshPrimitives2D.cpp  MeshPrimitives2D.h  MonotonePartition.cpp  MonotonePartition.h  Plane.h  Polygon.cpp  Polygon.h  QuadTree.cpp  QuadTree.h  RBTree.cpp  RBTree.h  RBTreeTraversable.h  RangeTree.cpp  RangeTree.h  Triangulate.cpp  Triangulate.h  Voronoi.cpp  Voronoi.h
src/Math/: CMakeLists.txt  FloatingPoint.h  MathX.cpp  MathX.h
src/Math/AML/: AML.h  AMLDCM.cpp  AMLDCM.h  AMLEulerAngles.cpp  AMLEulerAngles.h  AMLMatrix33.cpp  AMLMatrix33.h  AMLQuaternion.cpp  AMLQuaternion.h  AMLVector3.cpp  AMLVector3.h
src/MathLib/: CMakeLists.txt  FloatingPoint.h  MathLib.cpp  MathLib.h
src/MathLib/AML/: AML.h  AMLDCM.cpp  AMLDCM.h  AMLEulerAngles.cpp  AMLEulerAngles.h  AMLMatrix33.cpp  AMLMatrix33.h  AMLQuaternion.cpp  AMLQuaternion.h  AMLVector3.cpp  AMLVector3.h
src/MathLib/Geom/: Geom.cpp  Geom.h  Line.h  Plane.h
src/PhysLib/Cyclone/: BallisticsDemo.cpp  BallisticsDemo.h  Body.cpp  Body.h  CMakeLists.txt  Core.cpp  Core.h  FireworksDemo.cpp  FireworksDemo.h  Particle.cpp  Particle.h  ParticleContacts.cpp  ParticleContacts.h  ParticleForceGen.cpp  ParticleForceGen.h  ParticleLinks.cpp  ParticleLinks.h  ParticleWorld.cpp  ParticleWorld.h
src/Physics/: BallisticsDemo.cpp  BallisticsDemo.h  CMakeLists.txt  Core.cpp  Core.h  FireworksDemo.cpp  FireworksDemo.h  Particle.cpp  Particle.h  ParticleContacts.cpp  ParticleContacts.h  ParticleForceGen.cpp  ParticleForceGen.h  ParticleLinks.cpp  ParticleLinks.h
src/Physics/Cyclone/: BallisticsDemo.cpp  BallisticsDemo.h  Body.cpp  Body.h  CMakeLists.txt  Core.cpp  Core.h  FireworksDemo.cpp  FireworksDemo.h  Particle.cpp  Particle.h  ParticleContacts.cpp  ParticleContacts.h  ParticleForceGen.cpp  ParticleForceGen.h  ParticleLinks.cpp  ParticleLinks.h  ParticleWorld.cpp  ParticleWorld.h
src/SpaghettiEng/: CMakeLists.txt  SpaghettiEng.h
src/SpaghettiEng/Assets/: AssetManager.cpp  AssetManager.h
src/SpaghettiEng/Camera/: Camera.cpp  Camera2D.cpp  Camera2D.h  CameraController2D.cpp  CameraController2D.h  Controller.cpp  Controller.h
src/SpaghettiEng/Core/: App.cpp  App.h  AppContext.h  AppLayer.cpp  AppLayer.h  Application.cpp  Application.h  ArchitectureDetection.h  Base.h  CMakeLists.txt  Input.cpp  Input.h  InputState.cpp  InputState.h  KeyCodes.h  Layer.cpp  Layer.h  Log.cpp  Log.h  MouseCodes.h  ServiceLocator.h  Window.cpp  Window.h  WindowEvents.h
src/SpaghettiEng/Events/: EventManager.cpp  EventManager.h  Events.h
src/SpaghettiEng/ImGuiContext/: ImGuiContext.cpp  ImGuiContext.h
src/SpaghettiEng/ImGuiLayer/: ImGuiLayer.cpp  ImGuiLayer.h
src/SpaghettiEng/ImGuiUtils/: ImGuiUtils.cpp  ImGuiUtils.h
src/SpaghettiEng/Include/SpaghettiEng/: CMakeLists.txt  SpaghettiEng.h
src/SpaghettiEng/OpenGL32/: GL32Buffer.cpp  GL32Buffer.h  GL32BufferLayout.h  GL32Context.cpp  GL32Context.h  GL32Renderer.cpp  GL32Renderer.h  GL32Shader.cpp  GL32Shader.h  GL32ShaderUtils.cpp  GL32TextRenderer.cpp  GL32TextRenderer.h  GL32VertexArray.cpp  GL32VertexArray.h
src/SpaghettiEng/Render/: MeshData.cpp  MeshData.h  Renderer.cpp  Renderer.h  ShaderCache.cpp  ShaderCache.h
src/SpaghettiEng/Render/Backends/OpenGL/: GLBuffer.cpp  GLBuffer.h  GLBufferLayout.h  GLContext.cpp  GLContext.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLShader.h  GLShaderUtils.cpp  GLShaderUtils.h  GLTextRenderer.cpp  GLTextRenderer.h  GLVertexArray.cpp  GLVertexArray.h
src/SpaghettiEng/Render/Backends/OpenGL32/: GL32Buffer.cpp  GL32Renderer.cpp  GL32Renderer.h  GL32ShaderUtils.cpp  GL32TextRenderer.h  GL32VertexArray.cpp  GL32VertexArray.h
src/SpaghettiEng/Render/Camera/: Camera.cpp  Camera.h  Camera2D.h  CameraController2D.cpp
src/SpaghettiEng/Render/Mesh/: Mesh.cpp  Mesh.h  MeshCache.cpp  MeshCache.h  MeshData.cpp  MeshData.h  MeshFormat.h
src/SpaghettiEng/Resource/: ResourceCache.h  ResourceManager.cpp  ResourceManager.h
src/SpaghettiEng/Scene/: Components.h  Entity.cpp  Entity.h  Registry.h  Scene.cpp  Scene.h  SceneCameraController.cpp  SceneCameraController.h  SceneManager.cpp  SceneManager.h  SceneVisuals.cpp  SceneVisuals.h
src/SpgApp/: CMakeLists.txt  SpgApp.cpp  SpgApp.h
src/Tests/: CmakeLists.txt  main.cpp
src/app_editor/: CMakeLists.txt  editor.cpp
src/lib_eng/: CMakeLists.txt  eng.cpp  eng_window.cpp  eng_window.h
src/lib_eng/core/: CMakeLists.txt  core1.cpp  core1.h  core2.cpp  core2.h
src/lib_eng/include/eng/: eng.h
src/lib_geom/: CMakeLists.txt  geom.cpp
